# terminal2

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  zmodem.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  connection.rs  credentials.rs  lib.rs  logging.rs  main.rs  scripting.rs  zmodem.rs
src/components/: Modals.tsx  Sidebar.tsx  TerminalTab.tsx
src/styles/: global.css
src/types/: index.ts
