[package]
name = "my-terminal"
version = "0.1.0"
description = "Portable Terminal Emulator"
authors = ["MyTerminal"]
edition = "2021"

[lib]
name = "my_terminal_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ssh2 = "0.9"
native-tls = "0.2"
serialport = "4"
keyring = "3"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
